# yolo-training

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
model/: training.py
